--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
         <link rel="stylesheet" href="./style.css" />
         <script src="./script.js" defer></script>
     </head>
-    <body></body>
+    <body>
+        <header></header>
+
+        <main>
+            <div id="Container">
+                <div id="Boxes"></div>
+            </div>
+        </main>
+    </body>
 </html>
